添加注册swagger文档
