# docs/swagger.yaml
@@ -12,6 +12,19 @@ definitions:
       language:
         type: string
     type: object
+  dto.UserRegisterRequest:
+    description: 用户注册请求参数
+    properties:
+      email:
+        description: 邮箱
+        type: string
+      password:
+        description: 密码
+        type: string
+      username:
+        description: 用户名
+        type: string
+    type: object
   responses.Response:
     properties:
       code:
@@ -79,4 +92,32 @@ paths:
       summary: 获取支持的语言列表
       tags:
       - Languages
+  /api/v1/user/register:
+    post:
+      consumes:
+      - application/json
+      description: 提交用户名，邮箱和密码
+      parameters:
+      - description: 用户信息
+        in: body
+        name: userRegisterRequest
+        required: true
+        schema:
+          $ref: '#/definitions/dto.UserRegisterRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功响应
+          schema:
+            $ref: '#/definitions/responses.Response'
+        "400":
+          description: 错误响应
+          schema:
+            $ref: '#/definitions/responses.Response'
+        "500":
+          description: 系统内部错误
+          schema:
+            $ref: '#/definitions/responses.Response'
+      summary: 用户注册
 swagger: "2.0"
